--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,12 @@ form.Login-form-wrap input {
   .profile-content h3 {
     margin-top: 40px;
   }
+
+  .about-content p {
+    font-size: 16px !important;
+    line-height: 24px !important;
+
+  }
 }
 
 
@@ -95,3 +101,5 @@ form.Login-form-wrap input {
   padding: 8px 15px;
   border-radius: 10px;
 }
+
+@media only screen and (max-width: 767px) {}
